<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:text="@string/weight"
            android:id="@+id/textView"
            android:layout_weight="0.12"
            android:textSize="20dp"
            android:layout_marginLeft="10dp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/EnterWeight"
            android:hint="@string/ent_weight"
            android:layout_weight="0.52"
            android:inputType="number" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:id="@+id/genderSwitch"
            android:textOn="@string/MaleLabel"
            android:textOff="@string/FemaleLabel"
            android:showText="true"/>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/buttonSave"
        android:layout_gravity="center_horizontal"
        android:onClick="onAddClicked"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_weight="0.39"
        android:paddingTop="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drink_size"
            android:id="@+id/textView2"
            android:textSize="23dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="10dp"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/BacRg">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/one"
                android:id="@+id/radioButton1"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/textView2"
                android:layout_toEndOf="@+id/textView2"
                android:layout_marginLeft="120dp"
                android:checked="true"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/five"
                android:id="@+id/radioButton5"
                android:layout_toRightOf="@+id/radioButton1"
                android:layout_toEndOf="@+id/radioButton1"
                android:layout_marginLeft="30dp"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/twelve"
                android:id="@+id/radioButton12"
                android:layout_toRightOf="@+id/radioButton5"
                android:layout_toEndOf="@+id/radioButton5"
                android:layout_marginLeft="20dp"/>
        </RadioGroup>

    </RelativeLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:weightSum="1"
        android:layout_weight="0.24">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alcohol_percent"
            android:id="@+id/textView3"
            android:textSize="23dp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center_vertical" />

        <SeekBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/seekBar"
            android:layout_weight="1.00"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center_vertical" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewProgress"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_gravity="center_vertical" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="193dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.50"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">

        <Button
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:text="@string/add_drink"
            android:id="@+id/addButton"
            android:onClick="onAddClicked"
            android:layout_alignParentTop="true" />

        <Button
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:id="@+id/button3"
            android:layout_weight="0.50"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/addButton"
            android:layout_toRightOf="@+id/addButton"
            android:onClick="onResetClicked"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bacLev"
            android:id="@+id/bacText"
            android:layout_above="@+id/progressBar"
            android:textSize="30dp"
            android:layout_alignRight="@+id/button3"
            android:layout_alignEnd="@+id/button3"
            android:layout_marginLeft="50dp"
            android:layout_weight="0.50"/>

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:max="25"
            android:paddingTop="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_gravity="center" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:id="@+id/textView6"
            android:layout_below="@+id/progressBar"
            android:textSize="15dp"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:padding="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/colorText"
            android:textSize="15dp"
            android:text="@string/SafeLabel"
            android:layout_gravity="center"
            android:padding="5dp"
            android:layout_alignTop="@+id/textView6"
            android:layout_toRightOf="@+id/textView6"
            android:layout_toEndOf="@+id/textView6" />

    </RelativeLayout>

</LinearLayout>